--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
-# To change this license header, choose License Headers in Project Properties.
+# To change this license header, choose License Headers in Project Properties
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-dburl=${jdbc:mysql://18.218.234.8:3306/HumanAssistant?zeroDateTimeBehavior=convertToNull}
-dbuser=${root}
-dbpassword= ${password}
+dburl=   jdbc:mysql://18.218.234.8:3306/HumanAssistant?zeroDateTimeBehavior=convertToNull
+dbuser=  root
+dbpassword= Bookbangkok5%
